# simple-easyhec-calib

./: .gitignore  README.md  pyproject.toml
easyhec_calib/: __init__.py  cli.py  data.py  overlay.py  refine.py  segmentation.py  urdf_mesh_source.py  utils.py  viz.py
examples/: data_format.md
tests/: test_smoke.py
